# GrapycalPrivate

./: .gitignore  .gitmodules  README.md  lab-torch.Dockerfile  lab.Dockerfile  minilab.Dockerfile
.github/workflows/: frontend-ci.yml  remove-artifact.yml  standalone-cd.yml  standalone-ci.yml
backend/: README.md  pyproject.toml
backend/src/grapycal/: __init__.py  __main__.py  app.py
backend/src/grapycal/core/: background_runner.py  client_msg_types.py  running_module.py  slash_command.py  stdout_helper.py  strategies.py  typing.py  workspace.py  workspace.pyi
backend/src/grapycal/entry/: args.py  launcher.py  run.py  usersettings.py
backend/src/grapycal/extension/: extension.py  extensionManager.py  utils.py
backend/src/grapycal/extension_api/: behavior.py  decor.py  node_def.py  trait.py  utils.py
backend/src/grapycal/sobjects/: DVfunctionNode.py  controlPanel.py  edge.py  editor.py  fileView.py  functionNode.py  node.py  nodeLibrary.py  port.py  settings.py  sourceNode.py  workspaceObject.py
backend/src/grapycal/sobjects/controls/: __init__.py  buttonControl.py  codeControl.py  control.py  floatControl.py  imageControl.py  intControl.py  keyboardControl.py  linePlotControl.py  nullControl.py  objectControl.py  optionControl.py  sliderControl.py  textControl.py  toggleControl.py  triggerControl.py
backend/src/grapycal/standalone_utils/: updater.py
backend/src/grapycal/stores/: __init__.py  main_store.py  store_proxy.py
backend/src/grapycal/utils/: IsRunningManager.py  httpResource.py  io.py  logging.py  misc.py  nodeGen.py  os_stat.py  resource.py  suggestion.py
backend/test/: grapycal_test.py  test_a.py  test_edge.py  test_node.py  test_port_type.py  utils.py
charts/: minilab.yaml
electron/: .interpreter_list  forge.config.js  icon.icns  interpreterList.js  main.js  package-lock.json  package.json  serverManager.js
entry/: args.py  launcher.py  run.py
entry/cloud/: run.py
entry/standalone/: launcher.py  run.py
experiments/: test-pianoroll.py  test_pianoroll.ipynb
extensions/: grapycal_owo.py
extensions/grapycal_audio/: __init__.py  input.py  output.py  pyproject.toml  synth.py  utils.py
extensions/grapycal_audio/grapycal_audio/: __init__.py  filter.py  input.py  output.py  pianoroll.py  signal.py  synth.py  utils.py
extensions/grapycal_audio_torch/: __init__.py  dataset.py  misc.py  pyproject.toml
extensions/grapycal_audio_torch/grapycal_audio_torch/: __init__.py  misc.py
extensions/grapycal_builtin/: pyproject.toml
extensions/grapycal_builtin/grapycal_builtin/: __init__.py  utils.py
extensions/grapycal_discordpy/: __init__.py
extensions/grapycal_itri/: __init__.py  llama.py  pyproject.toml
extensions/grapycal_mediapipe/: __init__.py
extensions/grapycal_mongodb/: __init__.py
extensions/grapycal_myext/: __init__.py
extensions/grapycal_numpy/: fileLoader.py  numpy_operations.py
extensions/grapycal_opencv/: ImageFilter.py  ImageLoader.py
extensions/grapycal_os/: common.py
extensions/grapycal_ros/: __init__.py
extensions/grapycal_test/: __init__.py
extensions/grapycal_torch/: __init__.py  basic.py  dataloader.py  dataset.py  generative.py  loss.py  metrics.py  moduleNode.py  networkDef.py  normalize.py  optimizerNode.py  pyproject.toml  resnet.py  settings.py  store.py  tensor.py  tensor_operations.py
extensions/grapycal_torch/grapycal_torch/: __init__.py  activation.py  basic.py  cnn.py  conversion.py  dataloader.py  dataset.py  generated.py  generative.py  loss.py  manager.py  metrics.py  moduleNode.py  networkDef.py  normalize.py  optimizerNode.py  pooling.py  resnet.py  (+6 more)
frontend/: package-lock.json  package.json  webpack.config.dev.js  webpack.config.standalone.js
frontend/src/: app.ts  utils.ts  version.ts
packaging/: pack.py  pack_requirements.txt  pack_source.py  pack_standalone.py  standalone.bat  standalone.sh
packaging/template/: README.md  install.py  main.py
scripts/: build_frontend.py  bump.py  dev.sh  dev_backend.sh  dev_frontend.sh  dev_here.sh  dev_setup.sh  electron_test.bat  electron_test.sh  new_minor.py  new_patch.py  pack.py
(+87 files in other folders)
