[tool.poetry]
name = "grapycal"
version = "0.17.0-a.1"
description = "A highly interactive visual programming language"
authors = [
    "eri24816 <a931eric@gmail.com>",
    "secminhr <secminhrian@gmail.com>",
    "peterxcli <peterxcli@gmail.com>",
    "greenslime1024 <greenslime1024@gmail.com>",
]

maintainers = [
    "eri24816 <a931eric@gmail.com>",
]

[tool.poetry.dependencies]
python = "^3.11"
objectsync = ">=0.10.0"
pyyaml = "^6.0"
dacite = "^1.8.1"
usersettings = "^1.1.5"
aiohttp = "^3.9.1"
toml = "^0.10.2"
certifi = "^2023.11.17"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
termcolor = "^2.4.0"
psutil = "^5.9.8"
requests = "^2.31.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
grapycal = "grapycal.__main__:main"
