[tool.poetry]
name = "grapycal-audio-torch"
version = "0.3.0"
description = "A Grapycal extension for intersection of Audio processing and PyTorch"
authors = ["eri24816 <a931eric@gmail.com>"]
packages = [
    { include = "grapycal_audio_torch"}
]

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.*"
grapycal = ">=0.18.0"
grapycal-audio = ">=0.1.0"
grapycal-torch = ">=0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
